[workspace]
members = [
    "crates/ull65",
]
resolver = "3"

[workspace.dependencies]
bitflags = { version = "2.10.0", default-features = false }
log = { version = "0.4", default-features = false }
env_logger = { version = "0.11.8", default-features = false }

[workspace.package]
license = "MIT"
license-file = "LICENSE"
edition = "2024"