[package]
name = "ull"
description = "Provides core primitives for the ull emulation project."
version = "0.2.0"
license.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/ull"
readme = "README.md"
keywords = ["6502", "emulator", "cpu", "nostd", "apple"]
categories = ["emulators"]